# opengl_playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
includes/core/buffer/: byte_buffer.hh  frame_buffer.hh  typed_buffer.hh  util.hh
includes/core/camera/: camera.hh  look_at_camera.hh
includes/core/mesh/: mesh.hh  vertex.hh
includes/core/objets/: object.hh
includes/core/program/: program.hh  shader_structs.hh
includes/core/shader/: shader.hh
includes/core/texture/: image_format.hh  texture.hh  texture_format.hh
includes/init/: init_gl.hh  init_glew.hh  init_playground.hh
includes/utils/: GLhandle.hh
includes/utils/io/: io.hh
shaders/: structs.glsl
src/: CMakeLists.txt
src/core/buffer/: byte_buffer.cc  frame_buffer.cc  util.cc
src/core/camera/: camera.cc  look_at_camera.cc
src/core/mesh/: mesh.cc
src/core/objects/: object.cc
src/core/program/: program.cc
src/core/shader/: shader.cc
src/core/texture/: image_format.cc  texture.cc  texture_format.cc
src/init/: init_gl.cc  init_glew.cc  init_playground.cc
src/utils/io/: io.cc
tests/: CMakeLists.txt  test_objects.cc
